--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "mui-datatables": "^4.3.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
